--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -146,18 +146,17 @@
             android:id="@+id/textViewTipoEmergencia"
             android:layout_width="160dp"
             android:layout_height="23dp"
-            android:layout_below="@+id/button"
+            android:layout_below="@+id/editTextOrdenTrabajo"
             android:layout_marginStart="20dp"
             android:layout_marginTop="30dp"
             android:visibility="gone"
-            android:inputType="textCapCharacters"
             android:text="Tipo de Emergencia:" />
 
         <EditText
             android:id="@+id/EditTextTipoEmergencia"
             android:layout_width="160dp"
             android:layout_height="23dp"
-            android:layout_below="@+id/button"
+            android:layout_below="@+id/editTextOrdenTrabajo"
             android:layout_marginStart="30dp"
             android:layout_marginTop="30dp"
             android:layout_toEndOf="@+id/textViewTipoEmergencia"
@@ -195,7 +194,7 @@
             android:id="@+id/textViewMotivoReprogramar"
             android:layout_width="180dp"
             android:layout_height="23dp"
-            android:layout_below="@+id/button"
+            android:layout_below="@+id/editTextOrdenTrabajo"
             android:layout_marginStart="20dp"
             android:layout_marginTop="30dp"
             android:visibility="gone"
@@ -206,8 +205,8 @@
             android:id="@+id/EditTextMotivoReprogramar"
             android:layout_width="160dp"
             android:layout_height="23dp"
-            android:layout_below="@+id/button"
-            android:layout_marginStart="30dp"
+            android:layout_below="@+id/editTextOrdenTrabajo"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="30dp"
             android:layout_toEndOf="@+id/textViewMotivoReprogramar"
             android:background="@drawable/style_etbg"
@@ -216,8 +215,21 @@
             android:inputType="textCapCharacters"
             android:textSize="12dp" />
 
+        <ImageButton
+            android:id="@+id/ButtonReprogramar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/EditTextMotivoReprogramar"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="30dp"
+            android:shadowColor="@color/black"
+            android:visibility="gone"
+            android:src="@drawable/ic_baseline_access_time"
+            android:text="Camara" />
 
-        <TextView
+
+        <EditText
             android:id="@+id/textViewCheckSeleccion"
             android:layout_width="160dp"
             android:layout_height="23dp"
@@ -231,14 +243,12 @@
             android:id="@+id/buttonSend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/button"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="150dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="40dp"
             android:backgroundTint="@color/white"
             android:text="Enviar"
             android:textColor="@color/black" />
-
-
 
     </RelativeLayout>
 </layout>
