--- a/app/src/main/res/layout/eq_list_item.xml
+++ b/app/src/main/res/layout/eq_list_item.xml
@@ -1,33 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="16dp"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:id="@+id/sqlLiteOrdenTrabajo_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        tools:text="646343" />
-    <ImageView
-        android:id="@+id/eqImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:src="@drawable/ic_chevron_right_black"/>
+    <data>
 
-    <TextView
-        android:id="@+id/sqlLiteCiudad_text"
-        android:layout_width="wrap_content"
+    </data>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_toEndOf="@+id/sqlLiteOrdenTrabajo_text"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        tools:text="Popayán" />
-</RelativeLayout>
+        android:background="@drawable/style_etbg"
+        android:padding="16dp">
+
+        <TextView
+            android:id="@+id/sqlLiteID_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            tools:text="1" />
+
+        <ImageView
+            android:id="@+id/eqImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_chevron_right_black" />
+
+        <TextView
+            android:id="@+id/sqlLiteTipoServicio_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_toEndOf="@+id/sqlLiteID_text"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            tools:text="ARTIMO" />
+
+        <TextView
+            android:id="@+id/sqlLiteCliente_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_toEndOf="@+id/sqlLiteTipoServicio_text"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            tools:text="YANBAL" />
+    </RelativeLayout>
+</layout>
